--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "typescript",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.ts"
+    "start": "npx nodemon src/typescript/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "datastructures-js": "^10.2.0",
     "typescript": "^4.7.2"
   },
   "devDependencies": {
