--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,6 @@
         "strict": true,
         "skipLibCheck": true
     },
-    "include": ["src/typescript/**/*"],
+    "include": ["src/**/*"],
     "exclude": ["node_modules"]
 }
