--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "design-patterns",
-  "version": "1.0.0",
-  "description": "&nbsp; <u>Behaviral Design Patterns</u>\r - Memento Design Pattern\r - State Design Pattern",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "ts-node": "^10.9.2"
-  }
+    "name": "design-patterns",
+    "version": "1.0.0",
+    "description": "&nbsp; <u>Behaviral Design Patterns</u>\r - Memento Design Pattern\r - State Design Pattern",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "datastructures-js": "^10.2.0",
+        "typescript": "^4.7.2",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@types/uuid": "^8.3.4",
+        "nodemon": "^2.0.16",
+        "ts-node": "^10.8.0"
+    }
 }
